# vocalisai-mcp

./: .env.example  .gitignore  DOCUMENTACION.md  Dockerfile  README.md  TECHNICAL_GUIDE.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-dashboard.yml  release.yml
src/vocalisai_mcp/: __init__.py  __main__.py  client.py  config.py  ethics.py  registry.py  routing.py  server.py
src/vocalisai_mcp/dashboard/: __init__.py  metrics.py  server.py
src/vocalisai_mcp/dashboard/static/: index.html
tests/: conftest.py  test_ethics.py  test_registry.py  test_routing.py  test_tools.py
