[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─── Project Metadata ─────────────────────────────────────────────────────────
[project]
name = "vocalisai-mcp"
version = "1.0.0"
description = "Model Context Protocol server for VocalisAI — multi-agent voice AI platform for healthcare"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "voice-ai", "healthcare", "llm", "agents", "ethical-ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
vocalisai-mcp       = "vocalisai_mcp.server:main"
vocalisai-dashboard = "vocalisai_mcp.dashboard.server:main"

[project.urls]
Homepage = "https://github.com/zoharmx/vocalisai-mcp"
Issues = "https://github.com/zoharmx/vocalisai-mcp/issues"

# ─── Hatch Build ──────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/vocalisai_mcp"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ─── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vocalisai_mcp"]

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
